[package]
name = "c2n"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "visualizer","simulator"]

[workspace.dependencies]
anyhow = "1.0.81"
bs58 = "0.5.1"
futures = "0.3.30"
futures-timer = "3.0.3"
multiaddr = "0.18.1"
rand = "0.8.5"
thiserror = "1.0.59"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dependencies]
bs58 = { workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
multiaddr = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }


